2003-10-24  graydon hoare  <graydon@pobox.com>

	* adns/*.c, adns/*.h: Import adns library.
	* Makefile.am: Update to build adns into lib3rdparty.a.
	* AUTHORS: Mention adns.
	* network.cc: Call adns functions, not gethostbyname.

2003-10-20  Nathaniel Smith  <njs@codesourcery.com>

	* patch_set.cc (patch_set_to_text_summary): Give more detailed
	output.
	* commands.cc (get_log_message, status, diff): Use
	patch_set_to_text_summary for complete description.

2003-10-22  graydon hoare  <graydon@pobox.com>

	* monotone.texi: Document 'queue' command.
	* monotone.1: Likewise.

2003-10-22  graydon hoare  <graydon@pobox.com>

	* diff_patch.cc 
	(infer_directory_moves): New function.
	(rebuild_under_directory_moves): New function.
	(apply_directory_moves): New function.
	(merge3): Handle directory moves.
	* tests/t_renamed.at: New test for dir renames.
	* testsuite.at: Call it.

2003-10-21  graydon hoare  <graydon@pobox.com>

	* commands.cc (queue): New command.
	(list): Add "queue" subcommand, too.

2003-10-21  graydon hoare  <graydon@pobox.com>

	* diff_patch.cc (merge_deltas): New function.
	(check_map_inclusion): New function.
	(check_no_intersect): New function.
	(merge3): Rewrite completely. 
	* tests/t_rename.at: New test.
	* testsuite.at: Call it.
	* file_io.cc, file_io.hh (make_dir_for): New function.
	* commands.cc (update): Call make_dir_for on update.

2003-10-20  graydon hoare  <graydon@pobox.com>

	* commands.cc: Replace [] with idx() everywhere.

2003-10-20  Tom Tromey  <tromey@redhat.com>

	* cert.hh (get_branch_heads): Updated.
	Include <set>.
	* commands.cc (head): Updated for new get_branch_heads.
	(merge): Likewise.
	(propagate): Likewise.
	* cert.cc (get_branch_heads): Use set<manifest_id>.

	* commands.cc (merge): Use all caps for metasyntactic variable.
	(heads): Likewise.

	* network.cc (post_queued_blobs_to_network): Do nothing if no
	packets to post.

2003-10-20  graydon hoare  <graydon@pobox.com>

	* cert.cc (get_branch_heads): Fix dumb bug.